version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/ExternalData/ExternalDataFile.rst.txt
.. vale off



:class:`ExternalDataFile`
=========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.ExternalData.ExternalDataFile(importSettings: Ansys.Mechanical.ExternalData.ImportSettingsBase, filePath: str, identifier: str, description: str, isMainFile: bool, isRootRelativePath: bool)

   Bases: :py:obj:`object`


   
   A basic definition of the external data file. 
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ExternalDataFile

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Description`
            - Gets or sets the optional description of the external data file.
          * - :py:attr:`~FilePath`
            - Gets or sets the file path of the external data file.
          * - :py:attr:`~Identifier`
            - Gets or sets the identifier of the external data file.
          * - :py:attr:`~ImportSettings`
            - Gets or sets the import settings for current external data file.
          * - :py:attr:`~IsMainFile`
            - Gets or sets the main file flag of the external data file.
          * - :py:attr:`~IsRootRelativePath`
            - IsRootRelativePath property.







Property detail
---------------
.. py:property:: Description
   :type: Optional[str]


   
   Gets or sets the optional description of the external data file.
















   ..
       !! processed by numpydoc !!

.. py:property:: FilePath
   :type: Optional[str]


   
   Gets or sets the file path of the external data file.
















   ..
       !! processed by numpydoc !!

.. py:property:: Identifier
   :type: Optional[str]


   
   Gets or sets the identifier of the external data file.
















   ..
       !! processed by numpydoc !!

.. py:property:: ImportSettings
   :type: Optional[Ansys.Mechanical.ExternalData.ImportSettingsBase]


   
   Gets or sets the import settings for current external data file.

   An import settings can be created by calling the GetSettingsForFormat 
   method from the factory class .















   ..
       !! processed by numpydoc !!

.. py:property:: IsMainFile
   :type: Optional[bool]


   
   Gets or sets the main file flag of the external data file.

   The nodal coordinate data for the selected main file is processed by the mapping 
   utility. The nodal coordinate data will be skipped in all other files. 

   Only one file can be set as the main file, otherwise, an exception will be thrown 
   during the import. 

   If the import format is MAPDL, the value of this property will be ignored as the 
   MAPDL CDB file will always be treated as main file during the import.















   ..
       !! processed by numpydoc !!

.. py:property:: IsRootRelativePath
   :type: Optional[bool]


   
   IsRootRelativePath property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on